--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@types/chrome": "^0.0.198",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "babel-loader": "^9.1.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.2",
+    "eslint": "^8.27.0",
     "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^8.0.0",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webpack": "^5.75.0",
