--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.2",
     "eslint": "^8.27.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "node-sass": "^8.0.0",
-    "sass": "^1.56.1",
-    "sass-loader": "^13.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
+    "node-sass": "^8.0.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webpack": "^5.75.0",
@@ -34,6 +33,7 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^5.5.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "mini-css-extract-plugin": "^2.7.0",
   }
 }
