--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.1.3",
     "css-loader": "^6.7.2",
     "mini-css-extract-plugin": "^2.7.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "sass-loader": "^13.2.0",
     "styled-components": "^5.3.6",
