--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "sass-loader": "^13.2.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "mobx": "^6.3.13",
+    "mobx-react": "^7.2.1",
+    "mobx-utils": "^6.0.5"
   },
   "devDependencies": {
     "@craco/craco": "^7.0.0",
