--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "axios": "^1.1.3",
     "css-loader": "^6.7.2",
     "mini-css-extract-plugin": "^2.7.0",
+    "mobx": "^6.3.13",
+    "mobx-react": "^7.2.1",
+    "mobx-utils": "^6.0.5",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "sass-loader": "^13.2.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4",
-    "mobx": "^6.3.13",
-    "mobx-react": "^7.2.1",
-    "mobx-utils": "^6.0.5"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@craco/craco": "^7.0.0",
