--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3",
+    "react-router": "^6.5.0",
+    "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
     "sass-loader": "^13.2.0",
